MediaType => application/pdf in invoice download (#378)
* MediaType => application/pdf in invoice download

* Fix test flackiness